--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ regex = "1.10.2"
 clap = { version = "4.4.7", features = ["derive"] }
 colored = "2.0.4"
 thiserror = "1.0.50"
+pest = "2.7.4"
+pest_derive = "2.7.4"
+miette = { version = "5.10.0", features = ["fancy"] }
